kuber-homeworks/1.5/src/service_backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  ports:
    - port: 80
      targetPort: 11443
      protocol: TCP
      name: backend-svc
  selector:
    app: backend
