kuber-homeworks/1.5/src/service_frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: frontend-svc
  selector:
    app: frontend
